# banking

./: constants.csv  metric_diagnostics_example.py  metric_diagnostics_output.xlsx  metric_diagnostics_report.pptx  npv_engine.py  pillar_2a_model.py  pyproject.toml  query_sonia_example.py  sonia_rates.db  vertex_ai_example.py
metric_diagnostics/: __init__.py  diagnostics.py  report.py
metric_diagnostics.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
sonia_dashboard/: app.py
sonia_dashboard/static/: dashboard.js  index.html  styles.css
sonia_pipeline/: __init__.py  __main__.py  config.py  database.py  fetcher.py  setup_daily_task.bat
